# Garbage-Collector

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  understand.md
include/: common.h
src/: main.c
src/allocator/: allocator.c  allocator.h  arena.c  arena.h  barrier.c  barrier.h  compact.c  compact.h  mark_queue.c  mark_queue.h
src/gc/: gc.c  gc.h
src/runtime/: init.c  init.h
